--- a/app/index.html
+++ b/app/index.html
@@ -14,33 +14,68 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="bower_components/angular-material/themes/amber-theme.css">
     <!-- endbuild -->
+
+
   </head>
-  <body ng-app="myappApp">
+  <body ng-app="myappApp" layout"row" layout-fill role="main">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
+    <div ng-controller="AppCtrl" layout="column" layout-fill>
     <!-- Add your site or application content here -->
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#/">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#/contact">Contact</a></li>
-          <li><a ng-href="#/example">Example</a></li>
-        </ul>
-        <h3 class="text-muted">myapp</h3>
-      </div>
+      <md-toolbar class="md-primary">
+        <div class="md-toolbar-tools">
+          <md-button class="md-primary appMenu" ng-click="toggleLeft()" aria-label="Menu">
+            <md-icon icon="/img/icons/ic_menu_white_24dp.png" style="width: 24px; height: 24px;"></md-icon>
+          </md-button>
+          <span class="md-flex">DnD Character Builder</span>
+        </div>
 
-      <div ng-view=""></div>
+      </md-toolbar>
+      <section layout="row" flex>
+        <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-is-open="true" md-component-id="left">
+          <md-toolbar>
+            <h1 class="md-toolbar-tools">Menu</h1>
+          </md-toolbar>
+          <md-content ng-controller="LeftCtrl">
+            <md-button ng-click="go('/')" class="md-padding md-primary menu-item">
+              Home
+            </md-button>
 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
+            <md-button ng-click="go('/about')" class="md-padding md-primary menu-item">
+              About
+            </md-button>
+
+            <md-button ng-click="go('/contact')" class="md-padding md-primary menu-item">
+              Contact
+            </md-button>
+
+            <md-button ng-click="go('/example')" class="md-padding md-primary menu-item">
+              Example
+            </md-button>
+
+            <p hide-md show-gt-md>
+              This sidenav is locked open on your device. To go back to the default behavior,
+              narrow your display.
+            </p>
+          </md-content>
+        </md-sidenav>
+        <md-content flex class="md-padding">
+          <div layout="column" layout-fill layout-align="center center">
+            <div>
+              <md-button ng-click="toggleLeft()" class="md-primary">
+                Toggle left
+              </md-button>
+            </div>
+
+            <!-- Render the selected view -->
+            <div ng-view=""></div>
+
+          </div>
+        </md-content>
+      </section>
     </div>
-
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -53,6 +88,8 @@
        ga('send', 'pageview');
     </script>
 
+
+
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -64,8 +101,6 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/hammerjs/hammer.js"></script>
-
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -73,8 +108,8 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
-
     <script src="bower_components/angular-aria/angular-aria.js"></script>
+    <script src="bower_components/hammerjs/hammer.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-material-icons/angular-material-icons.js"></script>
     <!-- endbower -->
@@ -84,8 +119,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/controllers/example.js"></script>
-        <script src="scripts/controllers/theme.js"></script>
         <!-- endbuild -->
 </body>
 </html>
