--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
           <div id="doc-content" layout="column" layout-fill layout-align="center center">
 
             <!-- Render the selected view -->
-            <div ng-view=""></div>
+            <div id="view-content" ng-view=""></div>
 
           </div>
         </md-content>
