--- a/app/index.html
+++ b/app/index.html
@@ -55,27 +55,23 @@
           <md-content ng-controller="LeftCtrl">
 
             <md-button ng-click="go('/')" class="md-padding md-primary menu-item">
-              Home
+              <img  style="width: 24px; height: 24px;" src="img/icons/home-icon.png">Home
             </md-button>
 
-            <md-button ng-click="go('/character-details'); gotoTop()" class="md-padding md-primary menu-item">
-              Character Details
+            <md-button ng-click=" gotoTop(); go('/character-details')" class="md-padding md-primary menu-item">
+              <img  style="width: 24px; height: 24px;" src="img/icons/person-icon.png">Character Details
             </md-button>
 
-            <md-button ng-click="go('/proficiency'); gotoTop()" class="md-padding md-primary menu-item">
-              Proficiency
+            <md-button ng-click="gotoTop(); go('/proficiency')" class="md-padding md-primary menu-item">
+              <img  style="width: 24px; height: 24px;" src="img/icons/lightbulb-icon.png">Proficiency
             </md-button>
 
-            <md-button ng-click="go('/ability-scores'); gotoTop()" class="md-padding md-primary menu-item">
-              Ability Scores
+            <md-button ng-click="gotoTop(); go('/ability-scores')" class="md-padding md-primary menu-item">
+              <img  style="width: 24px; height: 24px;" src="img/icons/dice.png">Ability Scores
             </md-button>
 
-            <md-button ng-click="go('/to-do')" class="md-padding md-primary menu-item">
-              To Do
-            </md-button>
-
-            <md-button ng-click="go('/example')" class="md-padding md-primary menu-item">
-              Material Example
+            <md-button ng-click="go('/character-summary')" class="md-padding md-primary menu-item">
+              <img  style="width: 24px; height: 24px;" src="img/icons/details-icon.png">Character Summary
             </md-button>
 
           </md-content>
@@ -136,7 +132,7 @@
         <script src="scripts/controllers/proficiency.js"></script>
         <script src="scripts/controllers/ability-scores.js"></script>
         <script src="scripts/controllers/to-do.js"></script>
-        <script src="scripts/controllers/example.js"></script>
+        <script src="scripts/controllers/summary.js"></script>
         <!-- endbuild -->
 </body>
 </html>
