final commit, squashing all the old bugs (except iOS). Added a new logo and a new favicon. Fixed a few styling issues too.

--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,9 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
 
-    <!-- Roboto fonts: Normal(400), Medium(500) -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,600' rel='stylesheet' type='text/css'>
+    <!-- Roboto fonts: Normal(400), Medium(500), Bold(700) -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:700' rel='stylesheet' type='text/css'>
     <!-- endbuild -->
 
 
