--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>ScrollBinder</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -14,71 +14,79 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+
+    <!-- Roboto fonts: Normal(400), Medium(500), Bold(700) -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:700' rel='stylesheet' type='text/css'>
     <!-- endbuild -->
 
 
   </head>
-  <body ng-app="myappApp" layout"row" layout-fill role="main">
+  <body ng-app="myappApp" layout="row" layout-fill role="main">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div ng-controller="AppCtrl" layout="column" layout-fill>
     <!-- Add your site or application content here -->
-      <md-toolbar class="md-primary">
+      <md-toolbar id="mainMenu" class="md-primary">
         <div class="md-toolbar-tools">
           <md-button class="md-primary appMenu" ng-click="toggleLeft()" aria-label="Menu">
-            <md-icon icon="/img/icons/ic_menu_white_24dp.png" style="width: 24px; height: 24px;"></md-icon>
+            <md-icon icon="img/icons/ic_menu_white_24dp.png" style="width: 24px; height: 24px;"></md-icon>
           </md-button>
-          <span class="md-flex">Pocket Scroll</span>
+          <span class="md-flex">ScrollBinder</span>
         </div>
 
       </md-toolbar>
       <section layout="row" flex>
         <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-is-open="false" md-component-id="left">
           <md-toolbar>
-            <h1 class="md-toolbar-tools">Menu</h1>
+            <div class="md-toolbar-tools">
+              <span flex="85" class="md-flex">Menu</span>
+
+              <md-button flex="15" class="md-primary closeAppMenu" ng-click="toggleLeft()" aria-label="Close Menu">
+                <!-- <md-icon icon="img/icons/ic_clear_white_24dp.png" style="width: 24px; height: 24px;"></md-icon> -->
+                <!-- <md-icon></md-icon> -->
+                <img  style="width: 24px; height: 24px;" src="img/icons/ic_clear_white_24dp.png">
+
+              </md-button>
+
+            </div>
+
           </md-toolbar>
           <md-content ng-controller="LeftCtrl">
+
             <md-button ng-click="go('/')" class="md-padding md-primary menu-item">
-              Home
+              <img  style="width: 24px; height: 24px;" src="img/icons/home-icon.png">Home
             </md-button>
 
-            <md-button ng-click="go('/character-details')" class="md-padding md-primary menu-item">
-              Character Details
+            <md-button ng-click=" gotoTop(); go('/character-details')" class="md-padding md-primary menu-item">
+              <img  style="width: 24px; height: 24px;" src="img/icons/person-icon.png">Character Details
             </md-button>
 
-            <md-button ng-click="go('/ability-scores')" class="md-padding md-primary menu-item">
-              Ability Scores
+            <md-button ng-click="gotoTop(); go('/proficiency')" class="md-padding md-primary menu-item">
+              <img  style="width: 24px; height: 24px;" src="img/icons/lightbulb-icon.png">Proficiency
             </md-button>
 
-            <md-button ng-click="go('/example')" class="md-padding md-primary menu-item">
-              Material Example
+            <md-button ng-click="gotoTop(); go('/ability-scores')" class="md-padding md-primary menu-item">
+              <img  style="width: 24px; height: 24px;" src="img/icons/dice.png">Ability Scores
+            </md-button>
+
+            <md-button ng-click="go('/character-summary')" class="md-padding md-primary menu-item">
+              <img  style="width: 24px; height: 24px;" src="img/icons/details-icon.png">Character Summary
             </md-button>
 
           </md-content>
         </md-sidenav>
-        <md-content flex class="md-padding">
-          <div layout="column" layout-fill layout-align="center center">
+        <md-content flex>
+          <div id="doc-content" layout="column" layout-fill layout-align="center center">
 
             <!-- Render the selected view -->
-            <div ng-view=""></div>
+            <div id="view-content" ng-view=""></div>
 
           </div>
         </md-content>
       </section>
     </div>
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
-
 
 
     <!-- build:js(.) scripts/oldieshim.js -->
@@ -109,9 +117,11 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/contact.js"></script>
-        <script src="scripts/controllers/example.js"></script>
+        <script src="scripts/controllers/details.js"></script>
+        <script src="scripts/controllers/proficiency.js"></script>
+        <script src="scripts/controllers/ability-scores.js"></script>
+        <script src="scripts/controllers/to-do.js"></script>
+        <script src="scripts/controllers/summary.js"></script>
         <!-- endbuild -->
 </body>
 </html>
