--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
       <md-toolbar id="mainMenu" class="md-primary">
         <div class="md-toolbar-tools">
           <md-button class="md-primary appMenu" ng-click="toggleLeft()" aria-label="Menu">
-            <md-icon icon="img/icons/ic_menu_white_24dp.png" style="width: 24px; height: 24px;"></md-icon>
+            <img src="img/icons/ic_menu_white_24dp.png" style="width: 24px; height: 24px;"></md-icon>
           </md-button>
           <span class="md-flex">ScrollBinder</span>
         </div>
