--- a/app/index.html
+++ b/app/index.html
@@ -30,20 +30,21 @@
     <!-- Add your site or application content here -->
       <md-toolbar id="mainMenu" class="md-primary">
         <div class="md-toolbar-tools">
-          <md-button class="md-primary appMenu" ng-click="toggleLeft()" aria-label="Menu">
-            <img src="img/icons/ic_menu_white_24dp.png" style="width: 24px; height: 24px;"></md-icon>
+          <md-button class="md-primary appMenu" ng-click="openLeft()" aria-label="Menu">
+            <img src="img/icons/ic_menu_white_24dp.png" style="width: 24px; height: 24px;">
           </md-button>
           <span class="md-flex">ScrollBinder</span>
         </div>
 
       </md-toolbar>
       <section layout="row" flex>
-        <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-is-open="false" md-component-id="left">
+<!--        <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-is-open="false" md-component-id="left">-->
+			<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left">
           <md-toolbar>
             <div class="md-toolbar-tools">
               <span flex="85" class="md-flex">Menu</span>
 
-              <md-button flex="15" class="md-primary closeAppMenu" ng-click="toggleLeft()" aria-label="Close Menu">
+              <md-button flex="15" class="md-primary closeAppMenu" ng-click="closeLeft()" aria-label="Close Menu">
                 <!-- <md-icon icon="img/icons/ic_clear_white_24dp.png" style="width: 24px; height: 24px;"></md-icon> -->
                 <!-- <md-icon></md-icon> -->
                 <img  style="width: 24px; height: 24px;" src="img/icons/ic_clear_white_24dp.png">
@@ -98,9 +99,9 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
+<!--    <script src="bower_components/jquery/dist/jquery.js"></script>-->
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<!--    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>-->
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-messages/angular-messages.js"></script>
