--- a/app/index.html
+++ b/app/index.html
@@ -126,6 +126,8 @@
         <script src="scripts/controllers/party.js"></script>
         <script src="scripts/realtime/realtime-client-utils.js"></script>
         <script src="scripts/realtime/realtime.js"></script>
+<!--      <script src="scripts/realtime/drive.js"></script>-->
+      <script src="scripts/controllers/toe.js"></script>
         <!-- endbuild -->
       
 </body>
