did some bug fixing and tweaked some styles

--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,11 @@
               <img  style="width: 24px; height: 24px;" src="img/icons/details-icon.png">Character Summary
             </md-button>
 -->
+<!--
+            <md-button ng-click="gotoTop(); go('/dice')" class="md-padding md-primary menu-item">
+              <img  style="width: 24px; height: 24px;" src="img/icons/spells-grey.png">Dice
+            </md-button>
+-->
               
             <md-button ng-click="go('/party')" class="md-padding md-primary menu-item">
               <img  style="width: 24px; height: 24px;" src="img/icons/party-grey.png">Party
@@ -169,6 +174,14 @@
         <script src="scripts/realtime/realtime.js"></script>
 	  	<script src="scripts/realtime/angular-storage.js"></script>
       <script src="scripts/hammerScript.js"></script>
+      
+<!--
+      <script src="scripts/controllers/dice.js"></script>
+        <script src="scripts/dice/three.min.js"></script>
+	   <script src="scripts/dice/tween.min.js"></script>
+        <script src="scripts/dice/THREEx.KeyboardState.js"></script>
+	   <script type="text/javascript" src="scripts/dice/physi.js"></script>
+-->
 <!--      <script src="scripts/realtime/drive.js"></script>-->
 <!--      <script src="scripts/controllers/toe.js"></script>-->
         <!-- endbuild -->
